# x402-cardano-demo

./: .dockerignore  .env.example  .gitignore  GETTING_STARTED.md  README.md  docker-compose.yml
docs/: go-guide.md  java-guide.md  python-guide.md  running-without-docker.md  troubleshooting.md  typescript-guide.md
facilitator/: Dockerfile  blockfrost_signer.py  main.py  pyproject.toml
frontend/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  payment.ts  styles.css
frontend/src/shims/: bech32.d.ts  bech32.ts  blake2b.d.ts  blake2b.ts  libsodium-wrappers-sumo.d.ts  libsodium-wrappers-sumo.ts  lodash.d.ts  pbkdf2.d.ts  pbkdf2.ts  serialize-error.d.ts  serialize-error.ts
frontend/src/shims/lodash/: difference.ts  groupBy.ts  isUndefined.ts  last.ts  memoize.ts  merge.ts  minBy.ts  orderBy.ts  pick.ts  sum.ts  transform.ts  uniq.ts  uniqBy.ts  uniqWith.ts
server-go/: Dockerfile  go.mod  go.sum  main.go
server-java/: Dockerfile  pom.xml
server-java/src/main/java/com/example/x402demo/: Application.java
server-java/src/main/resources/: application.properties
server-py/: Dockerfile  main.py  pyproject.toml
server-ts/: Dockerfile  package.json
server-ts/src/: server.ts
