[project]
name = "x402-cardano-demo-server-py"
version = "0.1.0"
description = "Demo Python resource server protected by x402 Cardano payments"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
    "x402",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py"]
